# practice-log

./: .env  package-lock.json  package.json  practice.db-shm  practice.db-wal
src/: App.css  App.tsx  Beans.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20241019044538_create_practice_regiment_table.sql  20241019233939_create_pratice_piece_log_entry.sql
src-tauri/src/: main.rs
src/components/: AppNavbar.tsx
src/pages/: About.tsx  CreatePracticeRegiment.tsx  PracticeRegiments.tsx
